# spark-for-data-enginners

./: README.md  Spark_For_Data_Enginners_Execicio_Aula_3.ipynb  Word_Count.ipynb  docker-compose.yml  on_docker_compose_up.md  pyproject.toml
consumer/: consumer.ipynb
consumer/data/: db.sqlite
migrations/: migration_1.sql
outras atividades/: Word_Count.ipynb
producer/: producer.py
